--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <a href="#contact" class="btn-primary" style="display:inline-block;margin-top:1rem;">상담 받기</a>
         </div>
         <div class="about-image">
-          <img src="images/상어썸넬.jpg" alt="메디마케팅 소개 이미지"/>
+          <img src="images/상어썸넬.jpf" alt="메디마케팅 소개 이미지"/>
         </div>
       </div>
     </div>
