--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     }
     .about-image img { width:100%; height:100%; object-fit:cover; }
 
-    /* 기타 섹션은 생략 (서비스, 문의, 푸터 등 기존 그대로 유지) */
-
+    /* Animations */
     @keyframes fadeInUp { from{opacity:0;transform:translateY(30px);} to{opacity:1;transform:translateY(0);} }
     @media(max-width:768px){ .about-content{grid-template-columns:1fr;} }
   </style>
